# token-proxy

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  build.rs  cliff.toml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: check-backend.yml  check-frontend.yml  docker-publish.yml  pr-check.yml  release.yml  run-unit-tests.yml
docs/: requirements-dashboard-v2.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
migration/: Cargo.toml
migration/src/: lib.rs
src/: config.rs  lib.rs  main.rs
src-dashboard/: App.css  App.tsx  api.ts  index.css  main.tsx  styles.css
src-dashboard/components/: AccessPointDrawer.tsx  AccessPointTable.tsx  BasicInfoCard.tsx  ChatBubbleView.tsx  ClaudeSessionTimeline.tsx  CodeHighlight.tsx  CollapsibleCard.tsx  CopyableIdText.tsx  LogDetailModal.tsx  LogFilterBar.tsx  MarkdownRender.tsx  ModelMappingEditor.tsx  RawContentModal.tsx  RawResponseView.tsx  RequestContentCard.tsx  RequestHeadersCard.tsx  RequestLogTable.tsx  ResponseContentCard.tsx  SessionDetailView.tsx  SessionInfoHeader.tsx  SessionListView.tsx  StatCard.tsx  StatusToggle.tsx  ThemeToggle.tsx  TokenUsageCard.tsx  TrendChart.tsx
src-dashboard/hooks/: useAccessPoints.ts  useFetch.ts  useLogEvents.ts  useTheme.ts
src-dashboard/layouts/: AdminLayout.tsx
(+408 files in other folders)
