[package]
name = "token-proxy"
version = "1.6.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# ─── Domain 层（零外部框架依赖）───
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

# ─── Infrastructure 层 ───
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
aes-gcm = "0.10"
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { version = "0.13", features = ["json", "stream", "gzip", "brotli", "deflate"] }
rand = "0.10"
base64 = "0.22"
sha2 = "0.11"
regex = "1"

# ─── Presentation 层 ───
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# ─── 工具 ───
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dotenvy = "0.15"
rust-embed = "8"
mime_guess = "2"
bytes = "1"
hex = "0.4"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
chrono-tz = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
